[package]
name = "jw"
version = "2.2.1"
edition = "2021"

description = "Blazingly fast filesystem traverser and mass file hasher with diff support, powered by jwalk and xxh3!"

license-file = "LICENSE"
readme = "README.md"

exclude = [
  ".github",
  "target"
]

repository = "https://gitub.com/PsychedelicShayna/jw"
homepage = "https://gitub.com/PsychedelicShayna/jw"

categories = ["command-line-utilities", "filesystem"]
keywords = ["jwalk", "diff", "file", "search", "hash" ]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
crossbeam-channel = "0.5.13"
jwalk = "0.8.1"
md5 = "0.7.0"
sha2 = "0.10.8"
xxhash-rust = { version = "0.8.12", features = ["xxh3", "const_xxh3"] }


