[package]
name = "jw"
version = "2.2.10"
edition = "2021"
description = "Blazingly fast filesystem traverser and mass file hasher with diff support, powered by jwalk and xxh3!"
license = "GPL-3.0-or-later"
readme = "README.md"

exclude = [".github", "target"]

repository = "https://github.com/PsychedelicShayna/jw"
homepage = "https://github.com/PsychedelicShayna/jw"

categories = ["command-line-utilities", "filesystem"]
keywords = ["jwalk", "diff", "file", "search", "hash"]

[dependencies]
clap = { version = "4.5.17" }
crossbeam-channel = "0.5.15"
jwalk = "0.8.1"
md5 = "0.7.0"
memmap2 = "0.9.5"
memmap3 = "0.1.0"
blake3 = { version = "1.8", features = ["rayon", "mmap"] }
rayon = "1.10.0"
sha2 = "0.10.8"
xxhash-rust = { version = "0.8.12", features = ["xxh3", "const_xxh3"] }
gxhash = { version = "3.5", optional = true }
rapidhash = { version = "4.2.1", optional = true }

[features]
default = ["rapidhash"]
rapidhash = ["dep:rapidhash"]
gxhash = ["gxhash/deterministic"]

# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "target-cpu=native"]

# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
#


# Cargo.toml (additions)

